feat: implement menu component and social icons

--- a/styles/global.css
+++ b/styles/global.css
@@ -79,6 +79,14 @@ a {
   color: inherit;
 }
 
+a:hover {
+  background: var(--brand-gradient);
+
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+}
+
 ul[role="list"] {
   list-style: none;
 }
