--- a/styles/button.css
+++ b/styles/button.css
@@ -21,6 +21,10 @@
 .btn:hover{
   --btn-bg-color: var(--brand-gradient);
   --btn-color: var(--surface-color);
+
+  -webkit-background-clip: initial;
+  background-clip: initial;
+  color: var(--btn-color);
 }
 
 
@@ -59,4 +63,18 @@
     position: relative;
     z-index: 1;
   }
+}
+
+@media (width >= 80em) {
+  
+
+.btn-sm {
+  padding: .75rem 1.5rem;
+  font-size: var(--ff-base);
+}
+
+.btn-md {
+  padding: 1rem 2rem;
+  font-size: 1.125rem;
+}
 }
