--- a/styles/index.css
+++ b/styles/index.css
@@ -1,6 +1,6 @@
 @import url(global.css);
 @import url(utility.css);
-@import url(button.css);
+@import url(buttons.css);
 @import url(social.css);
 @import url(header.css);
 @import url(hero.css);
@@ -8,3 +8,4 @@
 @import url(about.css);
 @import url(cards.css);
 @import url(features.css) (width >= 80rem);
+@import url(pricing.css);
